# cxpq

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  cli-parser.c  cli-parser.h  cxpq.c  flake.nix  node-collection.c  node-collection.h  query-executor.c  query-executor.h  query.c  query.h  readme.md  string.c  string.h  types.h  util.c  util.h  xml-parser.c  xml-parser.h
examples/: all-features.xml  invalid-prolog.xml  text.xml
examples/invalid/: invalid-prolog.xml  invalid-root.xml  multiple-roots.xml  unclosed-prolog.xml
examples/valid/: all-features.xml  bookstore-commented.xml  bookstore-recursive.xml  bookstore-with-bom.xml  bookstore.xml
lib/libtap/: tap.c
parsers/: cdata.c  cdata.h  comment.c  comment.h  dtd.c  dtd.h  element.c  element.h  node.c  node.h  processing-instruction.c  processing-instruction.h  prolog.c  prolog.h  xpath.c  xpath.h
tests/: .gitignore  test-node-collection.c  test-query-executor.c  tests.c  util.h
tests/node-collection/: fixtures.c  tests.c
tests/query-executor/: tests.c
tests/query-executor/attribute/: fixtures.c  tests.c
tests/query-executor/element-name/: fixtures.c  tests.c
